## Process this file with automake to produce Makefile.in

###############################################################################
##                                                                           ##
## Copyright (c) 2001 Morgan Stanley Dean Witter and Co. All rights reserved.##
## See .../src/LICENSE for terms of distribution.                            ##
##                                                                           ##
##                                                                           ##
###############################################################################

lispdir = $(prefix)/lisp

lisp_DATA = \
	.emacs \
	a.el \
	aplus.el \
	keyb.el \
	xa.el

EXTRA_DIST = \
	.emacs \
	a.el \
	aplus.el \
	keyb.el \
	xa.el
